# WishlistOps

./: .dockerignore  .gitignore  .wishlistops_projects.json  AUDIT_IMPLEMENTATION.md  CHANGELOG.md  CHANGELOG_v0.2.0.md  CONFIG_PERSISTENCE_IMPLEMENTATION.md  DEPLOYMENT_GUIDE.md  DISTRIBUTION_GUIDE.md  Dockerfile  ENHANCEMENT_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  LAUNCH_GUIDE.md  MAIN_PY_FIX_SUMMARY.md  MANIFEST.in  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READY_SUMMARY.md  README.md  STEAM_GAME_CONTEXT_INTEGRATION.md  STEAM_INTEGRATION_COMPLETE.md  Strategic_Pivot_GameOps_Deterministic_Pipelines.md  USER_GUIDE.md  WEB_ENHANCEMENT_SUMMARY.md  conftest.py  debug_output.txt  pyproject.toml  pytest.ini  render.yaml  requirements-dev.txt  requirements.txt  run_test.bat  setup.py  test_installation.bat  test_realesrgan.py
.github/: copilot-instructions.md
.github/workflows/: README.md  launch-preview.yml  publish-to-pypi.yml  wishlistops.yml
dashboard/: README.md  app.js  app_enhanced.js  commits.html  docs.html  index.html  monitor.html  setup.html  styles.css  test.html  welcome.html
dashboard/guides/: commit_best_practices.md  discord.md  github.md  google_ai.md  steam.md
dashboard/static/: app_enhanced.js
docs/: AI_AGENT_QUICK_REFERENCE.md  DEPLOYMENT_AND_STRATEGY_RESEARCH.md  DEPLOYMENT_READY_GUIDE.md  IMAGE_ENHANCEMENT_SUMMARY.md  IMAGE_PROCESSING_TEST_RESULTS.md  LAUNCH_GUIDE.md  MARKETING_AUTOMATION_PLAYBOOK.md  PRODUCTION_DEPLOYMENT_SUMMARY.md  PYPI_README.md  QUICK_REFERENCE.md  QUICK_START.md  REALESRGAN_IMPLEMENTATION.md  REALESRGAN_STATUS.md  RELEASE_CHECKLIST.md  STEAM_API_NOTES.md  USER_GUIDE.md
docs/analysis/: BUSINESS_MODEL_RECOMMENDATIONS.md  EXECUTIVE_SUMMARY.md  MARKETING_STRATEGY.md  PRODUCT_CRITIQUE_AND_ANALYSIS.md  TECHNOLOGY_RECOMMENDATIONS.md
docs/architecture/: system_architecture_critique.md
docs/completion-summaries/: WORKFLOW_VALIDATION.md
scripts/: compare_images.py  compare_quality.py  manual_test_discord.py  test_compositor_manual.py  test_installation.sh
simulation/: mock_services.py  real_ai_simulation.py  scenario_runner.py
simulation/output/: announcement_body.txt  workflow_summary.json
simulation/output_real/: announcement.txt
tests/: test_ai_client.py  test_config.py  test_content_filter.py  test_discord_notifier.py  test_enhanced_processing.py  test_full_pipeline.py  test_git_parser.py  test_image_compositor.py  test_image_processing.py  test_integration.py  test_main.py  test_server.py  test_state_manager.py
wishlistops/: README.md  __init__.py  __main__.py  ai_client.py  cli.py  cli_v2.py  config.json  config_manager.py  content_filter.py  discord_notifier.py  git_parser.py  image_compositor.py  image_processor.py  image_validator.py  main.py  models.py  onboarding.py  state.json  state_manager.py  steam_client.py  template_banner.py  test_config.json  web_server.py
wishlistops.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
wishlistops/.state_backups/: state_20251212_100050.json
