[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wishlistops"
version = "1.0.0"
description = "Automated Steam marketing for indie game developers"
readme = "PYPI_README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "WishlistOps Contributors", email = "support@wishlistops.dev"}
]
keywords = [
    "steam",
    "gamedev",
    "marketing",
    "automation",
    "indie",
    "ai",
    "github-actions",
    "discord",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Games/Entertainment",
    "Topic :: Office/Business",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "GitPython>=3.1.40",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "tomli>=2.0.1; python_version<'3.11'",
    "pyyaml>=6.0.1",
    "google-generativeai>=0.3.0",
    "discord-webhook>=1.3.0",
    "discord.py>=2.3.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "tenacity>=8.2.3",
    "ratelimit>=2.2.1",
    "structlog>=23.2.0",
    "python-json-logger>=2.0.7",
    "orjson>=3.9.0",
    "aiohttp-session>=2.12.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.7.0",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.12",
    "pylint>=3.0.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/jamesthegreati/WishlistOps"
Documentation = "https://github.com/jamesthegreati/WishlistOps/blob/main/README.md"
Repository = "https://github.com/jamesthegreati/WishlistOps"
Issues = "https://github.com/jamesthegreati/WishlistOps/issues"
Changelog = "https://github.com/jamesthegreati/WishlistOps/blob/main/CHANGELOG.md"

[project.scripts]
wishlistops = "wishlistops.main:main"

[tool.setuptools]
packages = ["wishlistops"]
include-package-data = true

[tool.setuptools.package-data]
wishlistops = ["../dashboard/*.*", "../dashboard/**/*.*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
asyncio_mode = "auto"
